unpackaged/main/default/objects/Schedule_Freeze__c/Schedule_Freeze__c.object-meta.xml
<CustomObject>
    <label>Schedule Freeze</label>
    <nameField>
        <label>Schedule Freeze Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Freezes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>