unpackaged/main/default/objects/Schedule_Freeze__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <formula>Service_Territory__r.Id + Work_Type__r.Id + TEXT(Start_Date__c) + TEXT(End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Id</label>
    <type>Text</type>
</CustomField>