unpackaged/main/default/objects/Schedule_Freeze__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Schedule Freezes</relationshipLabel>
    <relationshipName>Schedule_Freezes</relationshipName>
    <type>Lookup</type>
</CustomField>