unpackaged/main/default/objects/Schedule_Freeze__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Schedule Freezes</relationshipLabel>
    <relationshipName>Schedule_Freezes</relationshipName>
    <type>Lookup</type>
</CustomField>