unpackaged/main/default/objects/Schedule_Freeze__c/validationRules/Start_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Start_Date__c &gt; End_Date__c,Start_Date__c == End_Date__c)</errorConditionFormula>
    <errorMessage>Start Date should be never Greater than OR Equal End Date</errorMessage>
</ValidationRule>