unpackaged/main/default/objects/Schedule_Freeze__c/validationRules/StartDateEndDateNotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateEndDateNotEmpty</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK( Start_Date__c) , ISBLANK(End_Date__c))</errorConditionFormula>
    <errorMessage>Start and End dates should not be blank</errorMessage>
</ValidationRule>